--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
     <article>
       <a href="https://suncoasterstudios.com/">
+        <img src="/img/sun_coaster_studios-logo.webp" alt="Sun Coaster Studios">
       </a>
     </article>
     <nav>
