--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sun Coaster Studios</title>
-	  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="img/SCS_FAVICON.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,13 +14,13 @@
 
   <header>
     <article>
-      <a href="https://suncoasterstudios.com/">
+      <a href="https://suncoasterstudios.ca">
         <img src="img/sun_coaster_studios-logo.webp" alt="Sun Coaster Studios">
       </a>
     </article>
     <nav>
       <ul>
-        <li data-id="portfolio"><a href="https://suncoasterstudios.com/">Our Work</a></li>
+        <li data-id="portfolio"><a href="https://suncoasterstudios.ca">Our Work</a></li>
         <li data-id="contact"><a href="/about">Contact Us</a></li>
       </ul>
     </nav>
