--- a/about.html
+++ b/about.html
@@ -1,1 +1,91 @@
-<p>contents</p>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sun Coaster Studios - About Us</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/SCS_FAVICON.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  </head>
+  <body>
+
+  <header>
+    <article>
+      <a href="https://suncoasterstudios.ca">
+        <img src="img/sun_coaster_studios-logo.webp" alt="Sun Coaster Studios">
+      </a>
+    </article>
+    <nav>
+      <ul>
+        <li data-id="portfolio"><a href="https://suncoasterstudios.ca">Our Work</a></li>
+        <li data-id="contact"><a href="https://suncoasterstudios.ca/about">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="suncoasterstudios">
+  <section id="about">
+    <p class="get_started"><span>Get Started with Sun Coaster Studios</span>
+      <br>Contact us today at <a href="mailto:suncoasterstudios@gmail.com">suncoasterstudios@gmail.com</a> for a consultation and start your journey to an optimized online presence.</p>
+    <h1>About Sun Coaster Studios</h1>
+    <article>
+      <figure>
+        <h3>Enzo S.</h3>
+        <p>Designer</p>
+      </figure>
+      <figure>
+        <h3>Craig E.</h3>
+        <p>Developer</p>
+      </figure>
+    </article>
+    <p>Sun Coaster Studios is your trusted partner for website design, development, and digital solutions, serving businesses in Toronto, The Tri-Cities, and across the Greater Toronto Area (GTA). With over 8 years of experience, we specialize in custom eCommerce solutions and creative marketing tools that help your business thrive online.</p>
+    <p>Our services include:</p>
+    <p><strong>Website Development and Redesign:</strong> We build user-friendly, professional websites that align with your brand and drive results. Whether you need a complete redesign or a new build from scratch, we’ve got you covered.</p>
+    <p><strong>Custom eCommerce Solutions:</strong> As Shopify experts, we deliver tailored solutions for businesses looking to start, grow, or upgrade their online stores.</p>
+    <p><strong>SEO and Digital Marketing Optimization:</strong> Our partnership with SEO and Google Ads specialists ensures your website ranks higher, attracts more traffic, and converts visitors into loyal customers.</p>
+    <p><strong>Email Campaign Design & Content:</strong> We create custom email marketing templates designed to reflect your brand and engage your audience. These professionally crafted eblast designs ensure your email campaigns stand out, drive clicks, and deliver results.</p>
+    <p>Whether you're a startup or an established business, we provide cost-effective, high-quality solutions tailored to your needs. We understand the unique challenges of businesses in Toronto, Kitchener, and the GTA and are here to help you stand out in a competitive online landscape.</p>
+  </section>
+</div>
+
+<footer>
+  <article>
+    <h2>Our Partners</h2>
+    <img src="img/logo-shopifyplus.png" alt="Shopify Plus">
+    <img src="img/klaviyo-partner-badge.webp" alt="Klaviyo">
+    <img src="img/logo-stablewp.png" alt="StableWP">
+  </article>
+  <div class="footer_info">
+    <figure>
+      <img src="img/sun_coaster_studios-logo.webp" alt="Sun Coaster Studios">
+    </figure>
+    <figure>
+      <p>Location</p>
+      <p>42 Carden Street<br>Guelph, ON N1H 3A2</p>
+    </figure>
+    <figure>
+      <p>Contact Us</p>
+      <p><a href="mailto:suncoasterstudios@gmail.com">suncoasterstudios@gmail.com</a></p>
+    </figure>
+    <figure>
+      <p>Follow us</p>
+      <p>
+        <a href="https://x.com/SCS_SunCoaster">
+          <img src="img/TWITTER_Logo.svg" alt="Twitter X">
+        </a>
+        <a href="https://www.linkedin.com/company/sun-coaster-studios/">
+          <img src="img/LINKEDIN_Logo.svg" alt="LinkedIn">
+        </a>
+      </p>
+    </figure>
+  </div>
+  <div class="copyright">
+    <p>© 2025 - <strong>Sun Coaster Studios</strong></p>
+  </div>
+</footer>
+
+</body>
+</html>
