--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li data-id="portfolio"><a href="https://suncoasterstudios.ca">Our Work</a></li>
-        <li data-id="contact"><a href="/about">Contact Us</a></li>
+        <li data-id="contact"><a href="https://suncoasterstudios.ca/about">Contact Us</a></li>
       </ul>
     </nav>
   </header>
