--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li data-id="portfolio"><a href="https://suncoasterstudios.ca">Our Work</a></li>
-        <li data-id="contact"><a href="https://suncoasterstudios.ca/about">Contact Us</a></li>
+        <li data-id="contact"><a href="/about">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -91,6 +91,37 @@
         <li><strong>Website Maintenance and Updates for Multiple Niagara Falls Brands:</strong> We managed and updated websites for prominent hospitality and resort brands in Niagara Falls, ensuring accurate content, resolving technical issues, and optimizing performance. Our proactive approach kept the sites aligned with industry trends and compatible across devices.</li>
         <li><strong>Redesigning Websites for Better User Experience and Simplified Maintenance:</strong> We modernized outdated websites with mobile-friendly, responsive designs, improved navigation, and streamlined content management systems. These updates enhanced accessibility, reduced maintenance effort, and elevated the overall user experience.</li>
         <li><strong>Demographic Research to Boost Ads and Refine User Experience:</strong> We conducted detailed research into target demographics to tailor advertising strategies and improve website design. This approach increased ad conversions and ensured a user-friendly experience.</li>
+      </ul>
+    </figure>
+    <figure>
+      <div class="overview">
+        <p class="order">03</p>
+        <article>
+          <p class="business">E-Commerce</p>
+          <h2>M2G Meat Co.</h2>
+          <div class="description">
+            <p>About</p>
+            <p>M2G Meat Co. is a trusted provider of high-quality meats, delivering directly to both residential and business customers. We designed and developed a fully responsive e-commerce website, focusing on user experience, mobile accessibility, and brand identity. The website was designed to be customizable to a large degree, giving our client a lot of control over making changes, while implementing safety features to keep the website stable during any changes.</p>
+          </div>
+        </article>
+      </div>
+      <div class="gallery">
+        <ul>
+          <li>
+            <p>Desktop</p>
+            <img src="img/portfolio-m2g-dt.webp" alt="M2G Meats">
+          </li>
+          <li>
+            <p>Mobile</p>
+            <img src="img/portfolio-m2g-mb.webp" alt="M2G Meats">
+          </li>
+        </ul>
+      </div>
+      <ul class="keys">
+        <li class="list_heading">Key Achievements:</li>
+        <li><strong>Full Website Creation:</strong> We were involved with each step of creating the website, from registering the domain to setting up the content layouts.</li>
+        <li><strong>Built Custom Content Features:</strong> We created mobile responsive content implementation elements, enabling multiple different ways to show and display content while maintaining stability across different devices and without technical support.</li>
+        <li><strong>Responsive and Mobile-First Approach:</strong> Our emphasis on responsive design and mobile optimization led to a substantial growth in mobile and desktop traffic.</li>
       </ul>
     </figure>
   </section>
